update with all names

--- a/index.html
+++ b/index.html
@@ -47,41 +47,69 @@
             <div class="row wide home-section about">
                 <h4>Meet our team</h4>
                 <div class="cols">
-                    <div class="third">
+                    <div class="half">
                         <img src="https://pbs.twimg.com/profile_images/1270736648863703041/XgvRe7xr_400x400.jpg">
                         <h3>Maggie Nolan '21</h3>
                         <p class="about-title">Co-founder &amp; co-editor</p>
                         <p>Statistics &amp; Data Science and Economics</p>
                     </div>
-                    <div class="third">
+                    <div class="half">
                         <img src="http://danielzhao.com/media/profile.jpg">
                         <h3>Daniel Zhao '21+0.5?</h3>
                         <p class="about-title">Co-founder &amp; co-editor</p>
                         <p>Statistics &amp; Data Science and Global Affairs</p>
                     </div>
                     <div class="third">
-                        <img src="https://pbs.twimg.com/profile_images/1270736648863703041/XgvRe7xr_400x400.jpg">
-                        <h3>Maggie Nolan '21</h3>
-                        <p class="about-title">Co-founder &amp; co-editor</p>
-                        <p>Statistics &amp; Data Science and Economics</p>
+                        <h3>Darwin Do '23</h3>
+                        <p class="about-title">Courses team</p>
                     </div>
                     <div class="third">
-                        <img src="http://danielzhao.com/media/profile.jpg">
-                        <h3>Daniel Zhao '21+0.5?</h3>
-                        <p class="about-title">Co-founder &amp; co-editor</p>
-                        <p>Statistics &amp; Data Science and Global Affairs</p>
+                        <h3>Michael Chau '21</h3>
+                        <p class="about-title">Courses team</p>
                     </div>
                     <div class="third">
-                        <img src="https://pbs.twimg.com/profile_images/1270736648863703041/XgvRe7xr_400x400.jpg">
-                        <h3>Maggie Nolan '21</h3>
-                        <p class="about-title">Co-founder &amp; co-editor</p>
-                        <p>Statistics &amp; Data Science and Economics</p>
+                        <h3>Nathan Kim '22</h3>
+                        <p class="about-title">Courses team</p>
                     </div>
                     <div class="third">
-                        <img src="http://danielzhao.com/media/profile.jpg">
-                        <h3>Daniel Zhao '21+0.5?</h3>
-                        <p class="about-title">Co-founder &amp; co-editor</p>
-                        <p>Statistics &amp; Data Science and Global Affairs</p>
+                        <h3>Daniel Kim '22</h3>
+                        <p class="about-title">Demographic data team</p>
+                    </div>
+                    <div class="third">
+                        <h3>Ashley Qin '22</h3>
+                        <p class="about-title">Demographic data team</p>
+                    </div>
+                    <div class="third">
+                        <h3>Emma Levin '22</h3>
+                        <p class="about-title">Demographic data team</p>
+                    </div>
+                    <div class="third">
+                        <h3>Isabel Corpus '21</h3>
+                        <p class="about-title">Demographic data team</p>
+                    </div>
+                    <div class="third">
+                        <h3>Jess Pevner '21</h3>
+                        <p class="about-title">Demographic data team</p>
+                    </div>
+                    <div class="third">
+                        <h3>Omar Chishti '22</h3>
+                        <p class="about-title">Dining team</p>
+                    </div>
+                    <div class="third">
+                        <h3>Yuan Wong '22</h3>
+                        <p class="about-title">Dining team</p>
+                    </div>
+                    <div class="third">
+                        <h3>Zully Arias '23</h3>
+                        <p class="about-title">Dining team</p>
+                    </div>
+                    <div class="third">
+                        <h3>Thomas Woodside '23</h3>
+                        <p class="about-title">Professors team</p>
+                    </div>
+                    <div class="third">
+                        <h3>Isha Dalal '21</h3>
+                        <p class="about-title">Professors team</p>
                     </div>
                 </div>
                 
