add GA, new photos

--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-150672121-2"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'UA-150672121-2');
+        </script>
         <meta charset="utf-8">
         <title>Yale Daily News Data Desk</title>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -60,6 +68,24 @@
                         <p>Statistics &amp; Data Science and Global Affairs</p>
                     </div>
                     <div class="third">
+                        <img src="media/ashley_qin.jpg">
+                        <h3>Ashley Qin '22</h3>
+                        <p class="about-title">Demographic data team</p>
+                        <p>Biomedical Engineering</p>
+                    </div>
+                    <div class="third">
+                        <img src="media/omar_chishti.jpg">
+                        <h3>Omar Chishti '22</h3>
+                        <p class="about-title">Dining team</p>
+                        <p>Biomedical Engineering</p>
+                    </div>
+                    <div class="third">
+                        <img src="media/yuan_wong.jpg">
+                        <h3>Yuan Wong '22</h3>
+                        <p class="about-title">Dining team</p>
+                        <p>Applied Mathematics</p>
+                    </div>
+                    <div class="third">
                         <h3>Darwin Do '23</h3>
                         <p class="about-title">Courses team</p>
                     </div>
@@ -76,10 +102,6 @@
                         <p class="about-title">Demographic data team</p>
                     </div>
                     <div class="third">
-                        <h3>Ashley Qin '22</h3>
-                        <p class="about-title">Demographic data team</p>
-                    </div>
-                    <div class="third">
                         <h3>Emma Levin '22</h3>
                         <p class="about-title">Demographic data team</p>
                     </div>
@@ -91,14 +113,7 @@
                         <h3>Jess Pevner '21</h3>
                         <p class="about-title">Demographic data team</p>
                     </div>
-                    <div class="third">
-                        <h3>Omar Chishti '22</h3>
-                        <p class="about-title">Dining team</p>
-                    </div>
-                    <div class="third">
-                        <h3>Yuan Wong '22</h3>
-                        <p class="about-title">Dining team</p>
-                    </div>
+                    
                     <div class="third">
                         <h3>Zully Arias '23</h3>
                         <p class="about-title">Dining team</p>
