yuan can't make up his mind jk

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                         <img src="media/yuan_wong.jpg">
                         <h3>Yuan Wong '22</h3>
                         <p class="about-title">Dining team</p>
-                        <p>Applied Mathematics</p>
+                        <p>Statistics &amp; Data Science</p>
                     </div>
                     <div class="third">
                         <img src="media/darwin_do.jpg">
