updated thank you message

--- a/public_projects/emoji_map/map.html
+++ b/public_projects/emoji_map/map.html
@@ -139,15 +139,6 @@
                 <input type="text" id="emoji_input" name="emoji" data-emojiable="true" data-emoji-input="unicode" maxlength="1" placeholder="Emoji" />
             </p>
 
-            <!-- <select name="emoji">
-                        <option disabled selected value>Select your emoji</option>
-                        <option id = "cry" value = "&#128557">&#128557</option>
-                        <option id = "scream" value = "&#129324">&#129324</option>
-                        <option id = "nap" value = "&#128564">&#128564</option>
-                        <option id = "date" value = "&#128158">&#128158</option>
-                        <option id = "eggplant" value = "&#127814">&#127814</option>
-                    </select> -->
-
             <!-- hidden inputs -->
             <div style="display: none;">
                 <input type="text" name="lat" id="lat_input" />
@@ -185,7 +176,7 @@
           </button>
                 </div>
                 <div class="modal-body">
-                    <p>Your response will be reviewed and possibly edited for clarity</p>
+                    <p>Your response will be reviewed and possibly edited for clarity before being added to the map. Thank you for contributing to this Yale Daily News project!</p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
