--- a/public_projects/emoji_map/map.html
+++ b/public_projects/emoji_map/map.html
@@ -343,7 +343,7 @@
         }
 
 
-        Papa.parse("https://raw.githubusercontent.com/dsmaugy/dsmaugy.github.io/master/approved_responses.csv", {
+        Papa.parse("https://raw.githubusercontent.com/ydntech/ydntech.github.io/master/public_projects/emoji_map/approved_responses.csv", {
             download: true,
             header: true,
             complete: (res) => {
