first official data push

--- a/public_projects/emoji_map/map.html
+++ b/public_projects/emoji_map/map.html
@@ -154,7 +154,7 @@
             <br>
             <div>
                 <label>Optional: <br>
-                    Provide your email to be contacted for a followup story</label>
+                    Provide your email to be potentially contacted for a followup story</label>
 
                 <textarea name="email" id="email_input" placeholder="Email" rows="1" style="width: 100%"></textarea>
                 <br>
