updated emoji box text

--- a/public_projects/emoji_map/map.html
+++ b/public_projects/emoji_map/map.html
@@ -149,7 +149,7 @@
             <div>
                 <label>Enter your description below:</label>
                 <br>
-                <textarea name="desc" id="desc_input" placeholder="Description" rows="8" style="width: 100%;"></textarea>
+                <textarea name="desc" id="desc_input" placeholder="Description of your story. It can be however long or short you want!" rows="8" style="width: 100%;"></textarea>
             </div>
             <br>
             <div>
