test with leaflet 1.6

--- a/public_projects/emoji_map/map.html
+++ b/public_projects/emoji_map/map.html
@@ -112,8 +112,13 @@
     </style>
 
     <!-- leaflet core -->
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
+    <!-- <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js">
+    </script> -->
+
+    <!-- leaflet 1.6 -->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" />
+    <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js">
     </script>
 
     <!-- leaflet clustering -->
