--- a/public_projects/popular_courses_202101/index.html
+++ b/public_projects/popular_courses_202101/index.html
@@ -62,7 +62,7 @@
     <div class="row narrow article-info">
         <h1>Yale's Most Popular Courses</h1>
         <p class="subtitle">The top courses students are shopping for Spring 2021</p>
-        <p class="byline">Analysis by the Yale Daily News Data Desk. <br><br> Original analysis done by Maggie Nolan &amp; Daniel Zhao</p>
+        <p class="byline">Analysis by the Yale Daily News Data Desk.</p>
     </div>
     <div class="row narrow article-text">
         <p>Even admist a pandemic, virtual classes, and quarantined Yalies, the age-old frenzy of shopping period has arrived once again upon Yale College. </p>
@@ -376,8 +376,8 @@
     <div class="row narrow">
         <div class="about">
             <h3>About this project</h3>
-            <p>The News scraped <a href="https://ivy.yale.edu/course-stats/" target="_blank">Yale's Course Demand Statistics website</a> using a Python script, then analyzed the data in R to extract the most popular courses overall, the courses with the
-                greatest change in shoppers day-to-day, and the most popular seminars. We run these scripts each night to update the data you see.</p>
+            <p> The code for this project was originally written by Maggie Nolan and Daniel Zhao. The News scraped <a href="https://ivy.yale.edu/course-stats/" target="_blank">Yale's Course Demand Statistics website</a> using a Python script, then analyzed
+                the data in R to extract the most popular courses overall, the courses with the greatest change in shoppers day-to-day, and the most popular seminars. We run these scripts each night to update the data you see.</p>
             <p>The News inferred classes to be seminars by defining seminars as non-lab courses that met once a week for approximately two hours. Because the Course Demand Statistics website does not contain meeting times, we merged in data from CourseTable,
                 which provides course meeting times.</p>
             <p>You can find our scripts, code, and cleaned dataset on <a href="https://github.com/ydntech/ydntech.github.io/tree/master/public_projects/popular_courses_202101" target="_blank">GitHub</a>.</p>
