--- a/public_projects/popular_courses_202201/index.html
+++ b/public_projects/popular_courses_202201/index.html
@@ -126,7 +126,7 @@
                             .append("text")
                             .text(d => d.codes)
                             .attr("class", ".mostShopped-codes")
-                            .attr("x", 90)
+                            .attr("x", 102) // was 90, increased by 12 to account for 4-digit class
                             .attr("y", (d, i) => i * 60 + 12)
                             .attr("font-size", "11px")
                             .attr("font-weight", "bold");
@@ -138,7 +138,7 @@
                             .append("text")
                             .text(d => d.name)
                             .attr("class", ".mostShopped-name")
-                            .attr("x", 90)
+                            .attr("x", 102) // was 90, increased by 12 to account for 4-digit class
                             .attr("y", (d, i) => i * 60 + 30)
                             .attr("font-size", "14px")
                             .attr("font-weight", "bold");
@@ -159,7 +159,7 @@
                             .append("text")
                             .text(d => d.count)
                             .attr("class", ".mostShopped-count")
-                            .attr("x", 80)
+                            .attr("x", 92) // was 80, increased by 12 to account for 4-digit class
                             .attr("y", (d, i) => i * 60 + 30)
                             .attr("fill", d => scaleColorMostShopped(d.count))
                             .attr("font-size", "40px")
