--- a/public_projects/popular_courses_202201/index.html
+++ b/public_projects/popular_courses_202201/index.html
@@ -126,7 +126,7 @@
                             .append("text")
                             .text(d => d.codes)
                             .attr("class", ".mostShopped-codes")
-                            .attr("x", 102) // was 90, increased by 12 to account for 4-digit class
+                            .attr("x", 90) // was 90, increased by 12 to account for 4-digit class
                             .attr("y", (d, i) => i * 60 + 12)
                             .attr("font-size", "11px")
                             .attr("font-weight", "bold");
@@ -138,7 +138,7 @@
                             .append("text")
                             .text(d => d.name)
                             .attr("class", ".mostShopped-name")
-                            .attr("x", 102) // was 90, increased by 12 to account for 4-digit class
+                            .attr("x", 90) // was 90, increased by 12 to account for 4-digit class
                             .attr("y", (d, i) => i * 60 + 30)
                             .attr("font-size", "14px")
                             .attr("font-weight", "bold");
@@ -159,7 +159,7 @@
                             .append("text")
                             .text(d => d.count)
                             .attr("class", ".mostShopped-count")
-                            .attr("x", 92) // was 80, increased by 12 to account for 4-digit class
+                            .attr("x", 80) // was 80, increased by 12 to account for 4-digit class
                             .attr("y", (d, i) => i * 60 + 30)
                             .attr("fill", d => scaleColorMostShopped(d.count))
                             .attr("font-size", "40px")
@@ -233,7 +233,7 @@
                             .append("text")
                             .text(d => d.codes)
                             .attr("class", ".trending-codes")
-                            .attr("x", 65)
+                            .attr("x", 65 + 10)
                             .attr("y", (d, i) => i * 60 + 12)
                             .attr("font-size", "11px")
                             .attr("font-weight", "bold");
@@ -245,7 +245,7 @@
                             .append("text")
                             .text(d => d.name)
                             .attr("class", ".trending-name")
-                            .attr("x", 65)
+                            .attr("x", 65 + 10)
                             .attr("y", (d, i) => i * 60 + 30)
                             .attr("font-size", "14px")
                             .attr("font-weight", "bold");
@@ -272,7 +272,7 @@
                                 }
                             })
                             .attr("class", ".trending-count")
-                            .attr("x", 55)
+                            .attr("x", 55 + 10)
                             .attr("y", (d, i) => i * 60 + 30)
                             .attr("fill", d => scaleColorTrending(d.change))
                             .attr("font-size", d => {
